2006-06-10  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/ page.itely, global.itely: editing
	and reorg.

	* Documentation/user/ various: findex -> funindex.

2006-06-10  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/time-scaled-music-iterator.cc: Use tupletSpannerDuration to
	insert extra tuplet events.

2006-06-10  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/programming-interfaces.itely: add
	info from NEWS.

	* python/convertrules.py: add annotatefoo -> annotate-foo
	rules.

	* Documentation/user/global.itely: start editing.

	* Documentation/user/page.itely: major editing, new spacing
	docs.

2006-06-10  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* HACKING: trim outdated info.

2006-06-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* scm/define-grobs.scm (all-grob-descriptions): Add
	line-spanner-interface to all grobs that already have
	text-spanner-interface or dynamic-text-spanner-interface

	* scm/page.scm: Rename annotate{headers,systems,page}->
	annotate-*

	* input/regression/page-spacing.ly,
	input/regression/page-layout-manual-position.ly: idem

2006-06-09  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/line-spanner.cc: cleanup property list.

	* scripts/lilypond-book.py (find_toplevel_snippets): don't use
	generator expressions (2.3 compat). 

2006-06-09  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* lily/vertical-align-engraver.cc: Make sure that the
	align{Above,Below}Context properties are included in the automatic
	documentation.

2006-06-08  Joe Neeman  <joeneeman@gmail.com>

	* scm/paper-system.scm (paper-system-annotate): also annotate the
	estimated pure-Y-extent

	* scm/define-grobs.scm: add pure-Y-extent and pure-Y-offset functions

	* lily/system.cc (break_into_pieces): set the estimated height
	of each child system

	* lily/stem.cc (pure_height): new pure-Y-extent callback

	* lily/staff-symbol-referencer.cc (callback): don't destroy
	the staff-position property
