@@ -5,7 +5,6 @@ DEVELOPMENT TEAM
 
 Han-Wen Nienhuys  - Core development
 Jan Nieuwenhuizen - Core development
-Pedro Kroger      - Build Meister
 Graham Percival   - Documentation Editor
 Mats Bengtsson    - Support Guru 
 
@@ -24,8 +23,10 @@ Trevor Bača
 Andrew Sidwell
 Chris Sawer
 Jamie Bullock
+Michael Meixner 
 Steve Doonan
 Trent Johnston
+Vivian Barty-Taylor
 
 
 DOCUMENTATION HELPERS
