@@ -4,12 +4,15 @@
 \header{
 texidoc="
 Beaming is generated automatically. Beams may cross bar lines. In that
-case, line breaks are forbidden.  Yet clef and key signatures are
-hidden just as with breakable bar lines.
+case, line breaks are forbidden.
 "
 }
 
 \context Staff  \relative c''  {
+
+  c8[ \times 2/3 { c16 d e] }
+  s4*3
+  
   c8.[ c16]
   c8.[ c16 c8.  c16]
   c16[ c8.] |
@@ -22,7 +25,7 @@ hidden just as with breakable bar lines.
   c32
   c2
 
-  c8[ c c] c8 % over barline
+  c8[^"over barline" c c] c8 
   c16[ c8 c16]
   c32[ c16 c16 c16 c32]
   c32[ c16 c8 c32]		 % hmm ?
